[gd_scene load_steps=4 format=3 uid="uid://cdspm7xmusprh"]

[ext_resource type="PackedScene" uid="uid://d36srjoab4cb8" path="res://Enemies/Enemy1.tscn" id="1_cgwth"]
[ext_resource type="Script" path="res://Maps/Map 1/Map1Path1.gd" id="1_ixh8o"]

[sub_resource type="Curve2D" id="Curve2D_enwoh"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2240, 1446, 0, 0, 0, 0, 2240, 1275, 0, 56.0633, 0, -56.0633, 2237, 1029, 0, 66.742, 0, -66.742, 2308, 938, 10.6908, 92.6535, -10.6908, -92.6535, 2300, 531, 0, 0, 0, 0, 2168, 395, 190.652, 3.56359, -190.652, -3.56359, 1706, 280, 110.471, -1.7818, -110.471, 1.7818, 1399, 269, -35.1347, -27.1438, 35.1347, 27.1438, 1338, 479, 0, 0, 0, 0, 1517, 660, 0, 0, 0, 0, 1588, 734, 0, 0, 0, 0, 1633, 782, -10.6787, -45.9646, 10.6787, 45.9646, 1669, 846, -2.66968, -61.4026, 2.66968, 61.4026, 1676, 986, 0, 0, 0, 0, 1604, 1113, 70, -12, -70, 12, 1487, 1212, 68, 10, -68, -10, 999, 1225, 26, 76, -26, -76, 774, 993, 28, 50, -28, -50, 747, 415, 68, 8, -68, -8, 635, 315, 0, 0, 0, 0, 237, 323)
}
point_count = 21

[node name="Path2D" type="Path2D"]
curve = SubResource("Curve2D_enwoh")
script = ExtResource("1_ixh8o")

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2(2240, 1446)
rotates = false
loop = false

[node name="Enemy1" parent="PathFollow2D" instance=ExtResource("1_cgwth")]

[connection signal="oneDeath" from="PathFollow2D/Enemy1" to="." method="_on_enemy_1_one_death"]
[connection signal="requestHealth" from="PathFollow2D/Enemy1" to="." method="_on_enemy_1_request_health"]
